# vasystem-api-rs

./: .gitattributes  Cargo.toml  LICENSE  README.md  build.rs
example/: Cargo.toml
example/src/: main.rs
pb/vasystem/api/v2/: aircraft.proto  airlines.proto  airports.proto  dayofweek.proto  routes.proto  timeofday.proto
src/: main.rs
vasystem-api/: Cargo.toml  build.rs  vasystem-api.protoset
vasystem-api/src/: api.rs  auth.rs  lib.rs  oauth2.rs
