[package]
name = "vasystem-api-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
oauth2 = "4.2"
prost = "0.11"
prost-types = "0.11"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = "1.0"
serde_json = "1.0"
tokio = "1.0"
tonic = { version = "0.8", features = ["tls", "tls-roots"] }

[build-dependencies]
tonic-build = "0.8"
walkdir = "2.3"
